sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value plusPlusPetit
			if ((plusPlusPetit(i,getValeur(i+1)))) {
                             ^